# Sky_proo_course-work_OOP

./: .coverage  README.md  config.py  pyproject.toml
data/: vacancies.json
src/: api.py  file.py  filter.py  list.py  main.py  vacancy.py
tests/: test_file.py  test_filter.py  test_list.py  test_vacancy.py
