[tool.poetry]
name = "sky-pro-course-work-oop"
version = "0.1.0"
description = ""
authors = ["Владислав Кошелев <testvlad59@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
